# vivo

./: .gitignore  .pre-commit-config.yaml  .typos.toml  README.md  RESPONSE.md  questions_response_part_6.md  run_jobs.py
SQL/: CA_jour.sql  ventes_meubles_deco.sql
create_biquery_external_tables/: config.py  gcs_to_bq_external.py  main.py
dbt_vivo_modeling/: .gitignore
dbt_vivo_modeling/dbt_vivo/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_vivo_modeling/dbt_vivo/macros/: format_date.sql
dbt_vivo_modeling/dbt_vivo/models/marts/: drug_graph.sql
dbt_vivo_modeling/dbt_vivo/models/staging/: stg_clinical_trials.sql  stg_drugs.sql  stg_pubmed.sql  stg_pubmed.yml  stg_pubmed_json.sql  stg_raw_pubmed.sql
jobs/: questions_response_part_6.md
jobs/SQL_test/: CA_jour.sql
jobs/dbt_vivo/: README.md  pyproject.toml
jobs/dbt_vivo/src/dbt_vivo/: main.py
jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/: dbt_project.yml  profiles.yml
jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/macros/: format_date.sql  string_utils.sql
jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/: source.yml
jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/marts/: drug_graph.yml  journal_most_mention_drugs.sql  journal_most_mention_drugs.yml
jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/staging/: stg_clinical_trials.sql  stg_clinical_trials.yml  stg_drugs.sql  stg_drugs.yml  stg_pubmed.sql  stg_pubmed.yml  stg_pubmed_json.sql  stg_pubmed_json.yml  stg_raw_pubmed.sql  stg_raw_pubmed.yml
jobs/gcs_bq_external_tables/: README.md  pyproject.toml
jobs/gcs_bq_external_tables/src/gcs_bq_external_tables/: config.py  gcs_bq_utils.py  main.py
jobs/traitement_ad_hook/: README.md  pyproject.toml
jobs/traitement_ad_hook/output/: ETHANOL.json  drug_graph.json
jobs/traitement_ad_hook/src/traitement_ad_hook/: bigquery_utils.py  config.py  drug_graph_analysis.py  main.py  output_utils.py
jobs/traitement_ad_hook/tests/: test_bigquery_utils.py  test_config.py
jobs/upload_to_gcs/: .gitignore  README.md  pyproject.toml
jobs/upload_to_gcs/data/: pubmed.json
jobs/upload_to_gcs/src/upload_to_gcs/: config.py  gcs_utils.py  main.py
jobs/upload_to_gcs/tests/: test_config.py  test_gcs_utils.py
load_data_to_gcs/: config.py  gcs_utils.py  main.py
traitement_ad_hoc/: bigquery_utils.py  config.py  drug_graph_analysis.py  main.py  requirements.txt
traitement_ad_hoc/output/: drug_graph.json  top_journals.json
